Lesson-3(practice)/css/card.css
.card{display: flex;
   justify-content: center;
   align-items: center;
 
  margin: 68px -15px 0;
    
   }
.card-item {max-width: 350px;
   border: 1px solid none; 
   margin:0 15px; 
}
.card-img {margin: auto;
   width: 70px;height: 70px;
   border: 1px solid #E72424;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
}
.card-img img{height: 100%; width:23px;height: 30px;}
.card-title {font-family: 'Open Sans';
   font-weight: 700;
   font-size: 20px;
   line-height: 27px;
   text-align: center;   
}
.card-text {width: 350px;;
   margin:16px 0 0;
font-family: 'Open Sans';
font-weight: 400;
font-size: 14px;
line-height: 19px;
text-align: center;
  }
.card-text p{text-align: center;
   color: #000000;}

 .wrap {  display: flex;
   justify-content: center;
   flex-direction: row;
   align-items: center;    
  margin: 62px -15px 0;
  padding: 0 15px;
 }
 
.price-list {margin: 0 15px;
}
.price-list-tarif {width: 340px;
   font-family: 'Open Sans';
   font-weight: 700;
   font-size: 20px;
   line-height: 50px;
   text-align: center; 
   background: #333333;
   margin-bottom: 2px; 
   color: #FFFFFF;

}
.price-list-price {font-family: 'Raleway', sans-serif;  
   font-size: 35px;
         line-height: 100px;
          font-weight: 700;
           text-align: center;
           ext-transform: uppercase;
           background: #333333;
           color: #FFFFFF;
           margin-bottom: 2px;
}
.price-list-timer {width: 340px;
   font-family: 'Open Sans';
   font-weight: 600;
   font-size: 14px;
   line-height: 50px;
   text-align: center; 
   background: #333333;
   margin-bottom: 2px; 
   color: rgba(255, 255, 255, 0.5);;
}
.price-list-weight {
   width: 340px;
   font-family: 'Open Sans';
   font-weight: 400;
   font-size: 20px;
   line-height: 40px;
   text-align: center; 
   background: #FFFFFF;
   margin-bottom: 4px; 
   color: #86878B;
}

